<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <ImageView
                android:id="@+id/signup_sina"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:src="@drawable/btn_sina"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/weichat"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="40.8dp"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">
        <ImageView
                android:id="@+id/signup_qq"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:src="@drawable/btn_qq"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/qq"/>

    </LinearLayout>


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="40.8dp"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">
        <ImageView
                android:id="@+id/signup_renren"
                android:layout_width="61dp"
                android:layout_height="61dp"
                android:src="@drawable/btn_renren"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:text="@string/renren"/>

    </LinearLayout>

</LinearLayout>