<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@color/download_manage_bg">
    <RelativeLayout
            android:id="@+id/rl_login_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/standard_blue"
            android:gravity="center_vertical">
        <ImageView
                android:id="@+id/iv_back"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/btn_back"
                />
        <TextView
                android:id="@+id/download_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="23dp"
                android:text="@string/load_edit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:visibility="visible"/>
        <TextView
                android:id="@+id/load_logo_loadmanager"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/load_manager"
                android:textColor="@color/color_load_title"
                android:textSize="20sp"
                android:gravity="center"
                />
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/download_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_gravity="center_horizontal"
            >

        <ImageView
                android:id="@+id/download_empty_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/download_empty"
                />
        <TextView
                android:id="@+id/empty_txt"
                android:layout_marginTop="9dp"
                android:layout_below="@+id/download_empty_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="暂无下载任务"
                android:textColor="#7d7d80"
                android:textSize="18sp"/>
        <Button android:id="@+id/find_more_course"
                android:layout_marginTop="55dp"
                android:layout_below="@+id/empty_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/find_more_course"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:background="@drawable/find_more_bg"
                />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/ll_download_no_empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
        <ExpandableListView
                android:layout_weight="1"
                android:id="@+id/expandableLoadmanager"
                android:groupIndicator="@null"
                android:choiceMode="singleChoice"
                android:childDivider="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="false"
                android:scrollingCache="true"
                android:fastScrollEnabled="false"
                android:scrollbars="none"
                android:cacheColorHint="@android:color/transparent"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/item_line"
                />
        <LinearLayout
                android:id="@+id/ll_load_all_operation"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:background="@color/white"
                >
            <TextView
                    android:id="@+id/stop_all_load"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/load_all_stop"
                    android:textColor="@color/standard_blue"
                    android:textSize="18sp"
                    android:gravity="center"
                    />
            <View
                    android:layout_width="0.8dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/item_line"></View>
            <TextView
                    android:id="@+id/start_all_load"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/load_all_start"
                    android:textColor="@color/standard_blue"
                    android:textSize="18sp"
                    android:gravity="center"
                    />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/ll_load_edit_state"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="@color/white"
                >

            <TextView
                    android:id="@+id/rel_load_check_all"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/load_check_all"
                    android:textSize="18sp"
                    android:layout_toRightOf="@+id/load_check_all"
                    android:textColor="@color/standard_blue"
                    android:gravity="center"
                    />
            <View
                    android:layout_width="0.8dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/item_line"></View>
            <TextView
                    android:id="@+id/delete_already_check"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/load_delete_check"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/text_download_normal"
                    />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>