<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#e6e6e6"
              android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/rl_login_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#1a1a1a"
            android:gravity="center_vertical">

        <ImageButton
                android:id="@+id/ib_signup"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/all_course_menu"/>

        <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/kaikeba_logo"
                android:background="@drawable/logo_kaikeba_a"/>
        <Button
                android:id="@+id/download_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:text="@string/load_edit"
                android:textColor="@color/color_load_title"
                android:textSize="18sp"
                android:background="@drawable/download_edit"
                android:visibility="gone"/>
        <TextView
                android:id="@+id/tv_logo_mycourse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/my_courses"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:visibility="gone"
                />
        <TextView
                android:id="@+id/load_logo_loadmanager"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/load_manager"
                android:textColor="@color/color_load_title"
                android:textSize="20sp"
                android:gravity="center"
                android:visibility="gone"
                />
    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black"/>
    <include
            layout="@layout/loading_layout"
            />
    <include
            layout="@layout/loading_fial_layout"
            />
    <LinearLayout
            android:id="@+id/ll_my_course_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            />
    <LinearLayout
            android:id="@+id/ll_load_manager_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            />
    <com.kaikeba.common.widget.LoadMoreListView
            android:id="@+id/lv_all_course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:listSelector="@android:color/transparent"
            android:divider="@null"/>

</LinearLayout>